<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/primary"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:padding="5dp"
            android:onClick="cancelActivity"
            android:src="@drawable/ic_back"
            app:tint="@color/white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="OTP Verification"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="8dp"
            android:padding="5dp"
            android:onClick="messageFunc"
            android:src="@drawable/ic_msg"
            app:tint="@color/white" />

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="8dp"
            android:padding="5dp"
            android:onClick="powerSettingFunc"
            android:src="@drawable/ic_logout"
            app:tint="@color/white" />
    </LinearLayout>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.unikrew.faceoff.ui.OtpVerificationActivity">

        <TextView
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:text="@string/OTP_heading"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="75sp"
            android:text="@string/otp_inst"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/heading" />

        <TextView
            android:id="@+id/tv_mobileNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/OTP_number"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="75sp"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_mobileNumber">

            <EditText
                android:id="@+id/et_otp1"
                android:layout_width="50sp"
                android:layout_height="wrap_content"
                android:hint="-"
                android:inputType="textNoSuggestions"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:nextFocusForward="@id/et_otp2"
                android:maxLength="1"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/et_otp2"
                android:layout_width="50sp"
                android:layout_height="wrap_content"
                android:hint="-"
                android:maxLength="1"
                android:inputType="number"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/et_otp3"
                android:layout_width="50sp"
                android:layout_height="wrap_content"
                android:hint="-"
                android:nextFocusDown="@id/et_otp4"
                android:maxLength="1"
                android:inputType="number"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/et_otp4"
                android:layout_width="50sp"
                android:layout_height="wrap_content"
                android:hint="-"
                android:nextFocusDown="@id/et_otp5"
                android:maxLength="1"
                android:inputType="number"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/et_otp5"
                android:layout_width="50sp"
                android:layout_height="wrap_content"
                android:hint="-"
                android:nextFocusDown="@id/et_otp6"
                android:inputType="number"
                android:maxLength="1"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/et_otp6"
                android:layout_width="50sp"
                android:layout_height="wrap_content"
                android:hint="-"
                android:inputType="number"
                android:maxLength="1"
                android:textAlignment="center" />
        </LinearLayout>

        <TextView
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            android:text="1:00 Minute"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout" />

        <TextView
            android:id="@+id/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50sp"
            android:text="@string/OTP_question"
            android:textColor="@color/blue"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/timer" />

        <TextView
            android:id="@+id/linkForOTP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/OTP_link"
            android:onClick="sendOtp"
            android:textColor="@color/blue"
            android:textColorLink="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/question" />

        <Button
            android:id="@+id/btn_verify"
            android:text="Verify"
            android:onClick="OTPVerification"
            android:layout_marginTop="50sp"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_corner_bg"
            android:padding="10dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linkForOTP"/>

        <Button
            android:id="@+id/btn_cancel"
            android:layout_marginTop="10sp"
            android:onClick="cancelActivity"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:background="@drawable/transparent_bg"
            android:padding="10dp"
            android:text="Cancel"
            android:textAllCaps="false"
            android:textColor="@color/primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_verify"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</LinearLayout>